add_executable(tp3-phonebook
    PhoneBook/Tests.cpp
    PhoneBook/Tests.h
    PhoneBook/PhoneNumber.h
    PhoneBook/Person.h
    PhoneBook/PhoneBook.h
)

add_executable(tp3-exo1-Points
    Exo1-tp3-Points.cpp
)

add_executable(tp3-exo1-Eratosthenes
    Exo1-tp3-Eratosthenes.cpp
)

add_executable(tp3-exo1-NumAndName
    Exo1-tp3-NumAndName.cpp
)